搭建界面基本样式

--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,19 @@
   <title>Document</title>
 </head>
 <body>
-  hello to see my TS哈哈哈
-  <!-- 使用下载的字体图标 -->
-  <span class="iconfont icon-guanbi"></span>
-  <span class="iconfont">&#xeaf2;</span>
+  <div id="list">
+    <ul class="list-warp">
+      <li
+        data-url="http://clips.vorwaerts-gmbh.de/big_buck_bunny.mp4"
+        data-title="动物复苏会"
+      >
+        <div>
+          <img src="https://fuss10.elemecdn.com/e/5d/4a731a90594a4af544c0c25941171jpeg.jpeg" alt="图片未加载">
+          <span class="iconfont icon-bofang"></span>
+        </div>
+        <h3>小米10 青春版发布会</h3>
+      </li>
+    </ul>
+  </div>
 </body>
 </html>
